force-app/main/default/objects/WorkType/fields/Activity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Activity_Classification__c</fullName>
    <label>Activity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>PoolDeck</fullName>
            </value>
            <value>
                <fullName>Digging</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>