force-app/main/default/objects/WorkType/fields/BO_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>BO_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BO Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Types (BO Work Type)</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>