force-app/main/default/objects/WorkType/fields/Capacity_Type__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Type__c</fullName>
    <label>Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type</valueSetName>
    </valueSet>
</CustomField>