force-app/main/default/objects/WorkType/fields/Category_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Category_Contractor__c</fullName>
    <label>Category Contractor</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>