force-app/main/default/objects/WorkType/fields/Category_Trevi_Employee__c.field-meta.xml
<CustomField>
    <fullName>Category_Trevi_Employee__c</fullName>
    <label>Category Trevi Employee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>