force-app/main/default/objects/WorkType/fields/Delivery_Volume__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Volume__c</fullName>
    <label>Delivery Volume</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>