force-app/main/default/objects/WorkType/fields/Department_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Department_in_Charge__c</fullName>
    <label>Department in Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department_in_Charge</valueSetName>
    </valueSet>
</CustomField>