force-app/main/default/objects/WorkType/fields/Exclude_from_WOLI_Validation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_WOLI_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from WOLI Validation</label>
    <type>Checkbox</type>
</CustomField>