force-app/main/default/objects/WorkType/fields/Is_Blower_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Is_Blower_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blower Pickup</label>
    <type>Checkbox</type>
</CustomField>