force-app/main/default/objects/WorkType/fields/Is_Pickup_at_the_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_Pickup_at_the_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pickup at the Store</label>
    <type>Checkbox</type>
</CustomField>