force-app/main/default/objects/WorkType/fields/Is_Prise_de_mesure__c.field-meta.xml
<CustomField>
    <fullName>Is_Prise_de_mesure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prise de mesure</label>
    <type>Checkbox</type>
</CustomField>