force-app/main/default/objects/WorkType/fields/Phase_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Phase_Contractor__c</fullName>
    <label>Phase Contractor</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>