force-app/main/default/objects/WorkType/fields/Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Warranty__c</fullName>
    <label>Product Warranty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>