force-app/main/default/objects/WorkType/fields/Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sage ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>