force-app/main/default/objects/WorkType/fields/testExternal__c.field-meta.xml
<CustomField>
    <fullName>testExternal__c</fullName>
    <externalId>true</externalId>
    <label>testExternal</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>