force-app/main/default/objects/WorkType/fields/Texto_A_S_Confirmation_de_prise_de_RDV__c.field-meta.xml
<CustomField>
    <fullName>Texto_A_S_Confirmation_de_prise_de_RDV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texto A/S Confirmation de prise de RDV</label>
    <type>Checkbox</type>
</CustomField>