force-app/main/default/objects/WorkType/fields/Texto_Contrat_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Texto_Contrat_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texto Contrat Confirmé</label>
    <type>Checkbox</type>
</CustomField>