force-app/main/default/objects/WorkType/fields/Texto_Contrat_En_attente_de_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Texto_Contrat_En_attente_de_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texto_Contrat_En attente de confirmation</label>
    <type>Checkbox</type>
</CustomField>