force-app/main/default/objects/WorkType/fields/Texto_Contrat_En_attente_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Texto_Contrat_En_attente_de_paiement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texto Contrat En attente de paiement</label>
    <type>Checkbox</type>
</CustomField>