force-app/main/default/objects/WorkType/fields/Texto_Contrat_et_A_S_en_route__c.field-meta.xml
<CustomField>
    <fullName>Texto_Contrat_et_A_S_en_route__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texto Contrat et A/S en route</label>
    <type>Checkbox</type>
</CustomField>