force-app/main/default/objects/WorkType/fields/Use_the_tax_group_of_the_location__c.field-meta.xml
<CustomField>
    <fullName>Use_the_tax_group_of_the_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use the tax group of the location</label>
    <type>Checkbox</type>
</CustomField>