force-app/main/default/objects/WorkType/fields/Work_Type_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Name_EN__c</fullName>
    <label>Work Type Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>