force-app/main/default/objects/WorkType/fields/Worktype_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Worktype_1_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worktype - 1 Year</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types_Less_than_1</relationshipName>
    <type>Lookup</type>
</CustomField>